--- a/packages/inspector/src/pages/data-explorer/index.module.css
+++ b/packages/inspector/src/pages/data-explorer/index.module.css
@@ -31,8 +31,8 @@
 .resizeHandle::after {
   content: "";
   position: absolute;
-  top: 6px;
-  bottom: 6px;
+  top: 0;
+  bottom: 0;
   left: 2px;
   width: 2px;
   background: #232c3a;
